--- a/styles/main.css
+++ b/styles/main.css
@@ -71,7 +71,7 @@ body {
     background:linear-gradient(120deg, #151c2e, #2077a6);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; }
-.social-discord:hover, .social-discord:link:hover { color: #7289DA; }
+.social-discord:hover, .social-discord:link:hover { color: #5865F2; }
 .social-instagram:hover, .social-instagram:link:hover {
     background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
     -webkit-background-clip: text;
