--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,13 @@
 body {
     background-color: #1a1f25;
     margin: 0;
+    /* cancel select */
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
 .container {
