--- a/styles/main.css
+++ b/styles/main.css
@@ -124,6 +124,18 @@ body {
 
 .social-tooltip:hover .social-tooltiptext {
     visibility: visible;
+    animation: social-tooltip-fadein 0.2s;
+    -webkit-animation: social-tooltip-fadein 0.2s;
+}
+
+@-webkit-keyframes social-tooltip-fadein {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes social-tooltip-fadein {
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
 
 /* Main-Navigation */
